# kitaku

./: .CLAUDE.md  .env.example  CLAUDE.md  README.md  keihan_neyagawa.csv  main.py  pyproject.toml  timetable_example.csv
src/core/: config.py  exceptions.py
src/models/: data_models.py
src/services/: llm_formatter.py  recommendation_engine.py  timetable_service.py  weather_service.py
